# DAVSync

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  settings.ini  settings.json  workflow
src/: CMakeLists.txt  ConfigManager.h  ConfigReader.cpp  ConfigReader.h  config_reader.cpp  config_reader.h  http_exceptions.hpp  logger.hpp  main.cpp  utils.cpp  utils.h  webdav.hpp
src/cmake/: cinatra.cmake
src/config_reader/: config_reader.cpp  config_reader.h
src/middleware/: basic_authentication.cpp  basic_authentication.h  digest_authentication.cpp  digest_authentication.h
src/routes/: auth.hpp  webdav.h
src/routes/webdav/: copy.cpp  copy.h  delete.cpp  delete.h  get.cpp  get.h  head.cpp  head.h  lock.cpp  lock.h  mkcol.cpp  mkcol.h  move.cpp  move.h  options.cpp  options.h  post.cpp  post.h  propfind.cpp  propfind.h  proppatch.cpp  proppatch.h  put.cpp  put.h  unlock.cpp  unlock.h
src/section/: BasicAuth.cpp  BasicAuth.h  DigestAuth.cpp  RequireXMLBody.cpp  RequireXMLBody.h  basic_auth.cpp  basic_auth.h  digest_auth.cpp  digest_auth.h
src/services/: FileETagServiceFactory.cpp  FileETagServiceFactory.h  FileLockService.cpp  FileLockService.h  FileLockServiceFactory.cpp  FileLockServiceFactory.h  FileLockServiceWithPgSQL.h  FileLockServiceWithRedis.cpp  FileLockServiceWithRedis.h  FileLockServiceWithSQLite.h  FilePropServiceFactory.cpp  FilePropServiceFactory.h  redis_service.h
src/services/file_etag/: FileETagService.h  MemoryFileETagService.cpp  MemoryFileETagService.h  RedisFileETagService.cpp  RedisFileETagService.h  SQLiteFileETagService.cpp  SQLiteFileETagService.h
src/services/file_lock/: FileLockService.cpp  FileLockService.h  FileLockServiceFactory.cpp  FileLockService_Redis.cpp  FileLockService_Redis.h  FileLockService_SQLite.h  MemoryFileLockService.cpp  MemoryFileLockService.h  RedisFileLockService.cpp  RedisFileLockService.h  SQLiteFileLockService.cpp  SQLiteFileLockService.h
src/services/file_prop/: FilePropService.h  MemoryFilePropService.cpp  MemoryFilePropService.h  RedisFilePropService.cpp  RedisFilePropService.h  SQLiteFilePropService.cpp  SQLiteFilePropService.h
src/services/file_properties/: FilePropService.h  FilePropServiceFactory.cpp  FilePropServiceFactory.h  FilePropService_Redis.h  FilePropService_SQLite.h
src/utils/: file.cpp  file.h  map.hpp  pair.cpp  pair_utils.cpp  pair_utils.h  path.cpp  path.h  redis.cpp  redis.h  string.cpp  string.h  string_utils.cpp  string_utils.h  webdav.cpp  webdav.h
tests/: CMakeLists.txt  config_reader.cpp  lock.xml  mian.c  mian.cpp  settings.ini  test_ConfigReader.cpp  test_config_reader.cpp  test_file_lock.cpp  test_json.cpp  test_ormpp.cpp  test_redis.cpp  test_xml.cpp  update_http_method.cpp
tests/config_reader/: config_reader.cpp
